--- a/statically-loaded-compiled.html
+++ b/statically-loaded-compiled.html
@@ -2,6 +2,6 @@
 <html>
   <body>
     <script src="http://yui.yahooapis.com/3.7.2/build/yui/yui-min.js"></script>
-    <script src="js/application.js"></script>
+    <script src="js/application-compiled.js"></script>
   </body>
 </html>
