included yui into the compile step

--- a/dynamically-loaded.html
+++ b/dynamically-loaded.html
@@ -2,6 +2,7 @@
 <html>
   <body>
     <script src="http://yui.yahooapis.com/3.7.2/build/yui/yui-min.js"></script>
+    <script src="js/module_config.js"></script>
     <script id="main-script" data-main="a" src="js/main.js"></script>
   </body>
 </html>
