--- a/statically-loaded-compiled.html
+++ b/statically-loaded-compiled.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <body>
-    <script src="http://yui.yahooapis.com/3.7.2/build/yui/yui-min.js"></script>
+    <script src="js/module_config.js"></script>
     <script id="main-script" data-main="a" src="js/application-compiled.js"></script>
   </body>
 </html>
